--- a/src/scss/index.css
+++ b/src/scss/index.css
@@ -120,6 +120,7 @@
   height: 24px;
 }
 .excel__table .row-info {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -133,6 +134,7 @@
   display: flex;
 }
 .excel__table .column {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -160,6 +162,31 @@
   border: none;
   outline: 2px solid #3c74ff;
   z-index: 2;
+}
+.excel__table .col-resize, .excel__table .row-resize {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background: #3c74ff;
+  opacity: 0;
+  z-index: 1000;
+}
+.excel__table .col-resize:hover, .excel__table .row-resize:hover {
+  opacity: 1 !important;
+}
+.excel__table .col-resize {
+  top: 0;
+  width: 4px;
+}
+.excel__table .col-resize:hover {
+  cursor: col-resize;
+}
+.excel__table .row-resize {
+  left: 0;
+  height: 4px;
+}
+.excel__table .row-resize:hover {
+  cursor: row-resize;
 }
 
 .db__header {
